# GeoLibre

./: .gitattributes  .gitignore  .oxfmtrc.json  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GOAL.md  IMPLEMENTATION_PLAN.md  README.md  mkdocs.yml  netlify.toml  package-lock.json  package.json  playwright.config.ts  ruff.toml
.github/: FUNDING.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  ci.yml  claude-code-review.yml  cloudflare-preview.yml  deploy-collab.yml  deploy-tiles.yml  deploy-viewer.yml  labels.yml  msix-store.yml  pages.yml  publish-container.yml  release.yml
apps/geolibre-desktop/: index.html  package.json  vite.config.ts
apps/geolibre-desktop/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
apps/geolibre-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/geolibre-desktop/src-tauri/capabilities/: default.json
apps/geolibre-desktop/src-tauri/src/: earth_engine_oauth.rs  lib.rs  native_duckdb.rs
apps/geolibre-desktop/src/components/: CollapsibleSection.tsx
apps/geolibre-desktop/src/hooks/: useBeforeUnloadGuard.ts  useBrowserTree.ts  useCollaboration.ts  useCommandBridge.ts  useConsentGatedActions.ts  useDesktopSettings.ts  useEmbedBridge.ts  useFileNamePrompt.ts  useGlobalShortcuts.ts  useLanguage.ts  useLayerChartData.ts  useLayoutOptions.ts  useNotebookBridge.ts  useOsmPbfLoader.ts  usePlugins.ts  useProjectFileActions.ts  useProjectUrlLoader.ts  useRecentProjectsPersistence.ts  useRegisterBrowserPanel.ts  useRightPanels.ts  useRuntimeEnvironmentVariables.ts  useStartupUpdateCheck.ts  useStyleLibraryPersistence.ts  useThemeMode.ts  useThemeScheme.ts  useToolbarPanels.ts  useUiProfileBootstrap.ts  useUndoRedoShortcuts.ts  useViewportHistory.ts
apps/geolibre-desktop/src/i18n/: index.ts  languages.ts
apps/geolibre-desktop/src/lib/: admin-profile.ts  attribute-charts.ts  attribute-columns.ts  attribute-expression.ts  attribute-form-messages.ts  attribute-selection.ts  attribute-stats.ts  basemap-presets.ts  basemap-style.ts  browser-favorites.ts  browser-folders.ts  browser-node-module.ts  browser-tree.ts  build-project-snapshot.ts  cereus-loader.cdn.ts  cereus-loader.ts  chart-export.ts  collab-client.ts  collab-protocol.ts  collada-to-glb.ts  column-explorer.ts  commands.ts  coordinates.ts  crs-utils.ts  csv.ts  deck-viz-input.ts  delimited-text.ts  detection-models.ts  diagnostics.ts  duckdb-geometry.ts  duckdb-processing.ts  duckdb-vector-guard.ts  duckdb-vector-loader.ts  expression-inputs.ts  external-map-links.ts  external-plugins.ts  fetch-error.ts  (+98 more)
apps/geolibre-desktop/vite-plugins/: bundled-plugins.ts  copy-cesium-assets.ts  copy-rtl-text.ts
backend/geolibre_server/: notebook_client.py  pyproject.toml
backend/geolibre_server/geolibre_server/: sedona_ops.py  vector_ops.py
backend/geolibre_server/geolibre_server/app/: conversion.py  main.py  ml.py  oetm.py  oetm_extractor.py  postgis.py  raster.py  runtime.py  sql.py  vector.py  whitebox.py
backend/geolibre_server/notebook_examples/: Welcome.ipynb
backend/geolibre_server/tests/: test_conversion.py  test_conversion_gdb.py  test_ml.py  test_postgis.py  test_raster.py  test_security.py  test_sql.py  test_vector.py  test_vector_golden.py  test_vector_ops.py  test_whitebox_endpoints.py
docker/: entrypoint.sh  nginx.conf
docs/: architecture.md  collaboration.md  contributing.md  downloads.md  getting-started.md  i18n.md  index.md  oetm-pdf-layout-analyse.md  plugin-api.md  privacy.md  project-format.md  roadmap.md  terms.md  ui-profiles.md
docs/stylesheets/: extra.css
docs/tutorials/: vector-analysis.md
docs/user-guide/: adding-data.md  ai-assistant.md  data-integrations.md  interface.md  map-controls.md  plugins.md  processing.md  settings.md  styling.md
e2e/: a11y.spec.ts  error-handling.spec.ts  export.spec.ts  helpers.ts  layer-groups.spec.ts  layer-panel.spec.ts  plugin-install.spec.ts  pwa.spec.ts  rtl.spec.ts  scenegraph.spec.ts  set-view.spec.ts  smoke.spec.ts  storymap.spec.ts  theme.spec.ts
e2e/fixtures/: malformed.geojson
packaging/msix/: README.md  build-msix.ps1
python/: hatch_build.py  pyproject.toml
python/examples/: getting-started.ipynb
python/src/geolibre/: __init__.py  _extension.py  _frontend.js  _server.py  basemaps.py  color_ramp.py  geolibre.py  legends.py  project.py
python/tests/: test_map.py  test_project.py  test_scripting.py
scripts/: build-embed.mjs  build-jupyterlite.mjs  build-msix.ps1  fetch-basemaps-assets.mjs  gen-osm-fixture.mjs  gen-pmtiles-fixture.mjs  gen-whitebox-menu-catalog.mjs  oetm_pdf_explore.py  oetm_pdf_extractor.py  tauri-build.mjs
tests/: add-data-helpers.test.ts  add-data-i18n.test.ts  add-tile-layer.test.ts  apply-service.test.ts  arcgis-feature-layer.test.ts  arcgis-i3s-tiles.test.ts  assistant-basemaps.test.ts  assistant-os-env.test.ts  assistant-provider-fields.test.ts  assistant-provider-persistence.test.ts  assistant-provider.test.ts  assistant-symbology.test.ts  attribute-calculator.test.ts  attribute-charts.test.ts  attribute-columns.test.ts  attribute-form.test.ts  attribute-selection.test.ts  attribute-stats.test.ts  basemap-control-plugin.test.ts  browser-favorites.test.ts  browser-folders.test.ts  browser-tree.test.ts  cesium-camera.test.ts  cesium-ion-token.test.ts  cesium-layer-sync.test.ts  clouds.test.ts  cog-convert.test.ts  collab-protocol.test.ts  color-ramp.test.ts  colormap-colors.test.ts  column-explorer.test.ts  commands.test.ts  components-constructors-loader.test.ts  control-owns-paint.test.ts  coordinates.test.ts  core-project.test.ts  data-parsing.test.ts  deck-viz.test.ts  derived-geometry.test.ts  diagnostics.test.ts  (+165 more)
tests/fixtures/: mini.pmtiles  sample-nc3-xy.nc  sample-nc3.nc
tests/fixtures/vector/: SPEC.md
workers/collab/: package.json
workers/collab/src/: index.ts  protocol.ts  session.ts
workers/tiles/: package.json  wrangler.toml
workers/tiles/src/: index.ts  reproject.ts
workers/viewer/: package.json
workers/viewer/src/: index.ts
(+201 files in other folders)
