[package]
name = "geolibre-desktop"
version = "1.5.0"
description = "GeoLibre Desktop — lightweight cloud-native desktop GIS"
authors = ["GeoLibre Contributors"]
edition = "2021"

[lib]
name = "geolibre_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

# Optimize the release binary for size. The frontend assets dominate the binary,
# but these still trim the Rust code: LTO + a single codegen unit let the linker
# drop dead code across crates, `strip` removes symbols/debuginfo, `opt-level="s"`
# favors size while keeping reasonable runtime speed, and `panic="abort"` drops
# unwinding tables (a panic in the desktop shell terminates the app either way).
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS CSPRNG for the per-launch Jupyter token (already an indirect dep).
getrandom = "0.2"
